--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 * {
-    margin: 300;
+    margin: 0;
     padding: 0;
 }
 
 .body {
+    width: 80vw;
     display: flex;
     flex-direction: column;
 }
@@ -39,13 +40,14 @@
 
 .quote {
     color: #1f2937;
+    font-size: 36px;
     font-style: italic;
     font-weight: lighter;
     background-color: #e5e7eb;
     border: red solid 2px;
 }
 
-.footer {
+.footer { /* Change this to "Call to action", there is a small copyright footer below */
     background-color: #f0ffff;
     border: #00f solid 2px;
 }
@@ -61,7 +63,7 @@
     font-weight: bolder;
 }
 
-.secondary {
+.secondary { /* Might not need this */
     display: flex;
     color: #e5e7eb;
 }
