--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
 }
 
@@ -22,6 +22,8 @@
 .logo {
     display: flex;
     width: 45%;
+    border-radius: 5px;
+    margin: 8px;
 }
 .main-header {
 
@@ -31,16 +33,35 @@
     display: flex;
     width: 35%;
     height: auto;
+    border-radius: 8px;
 }
 
 .example-loads {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 150px;
+    gap: 30px;
     background-color: #f0ffff;
     border: #00f solid 2px;
 }
 
+
+.load-1, .load-2, .load-3, .load-4, .load-5, .load-6, .load-7, .load-8, .load-9, .load-10 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;   
+}
+
 .load-pic {
-    width: 20vw;
+    border-radius: 8px;
+    width: 12vw;
     height: auto;
+}
+
+.places {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .location {
@@ -53,6 +74,8 @@
     font-size: 36px;
     font-style: italic;
     font-weight: lighter;
+    text-align: center;
+    padding: 100px 200px;
     background-color: #e5e7eb;
     border: red solid 2px;
 }
@@ -71,6 +94,9 @@
 
 .footer {
     color: #e5e7eb;
+    font-size: 12px;
+    text-align: center;
+    padding: 10px 0 25px;
     background-color: #1f2937;
     border: #f0ffff solid 2px;
 }
@@ -84,6 +110,21 @@
     color: #e5e7eb;
     font-size: 48px;
     font-weight: bolder;
+}
+
+.text {
+    color: #1f2937;
+    font-size: 14px;
+    width: 175px;
+    text-align: center;
+}
+
+.info {
+    color: #1f2937;
+    font-size: 36px;
+    font-weight: bolder;
+    text-align: center;
+    margin: 25px 0;
 }
 
 .secondary { /* Might not need this */
