--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 * {
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
 }
 
 .body {
-    width: 80vw;
+    width: 80%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
@@ -15,26 +16,43 @@
 
 .header-section {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #1f2937;
     border: #ff0000 solid 2px;
 }
 
-.info-section {
-    background-color: #fffff0;
-}
-
 .upper-header {
+    width: 100%;
     display: flex;
+    justify-content: space-between;
+    border: #ff0000 solid 2px;
 }
 
 .logo {
     display: flex;
-    width: 45%;
+    justify-content: flex-start;
+    width: 125px;
+    height: auto;
     border-radius: 5px;
     margin: 8px;
+    border: greenyellow solid 2px;
+}
+
+a {
+    display: flex;
+    text-decoration: none;
+    color: #e5e7eb;
+    margin: 8px;
+    border: greenyellow solid 2px;
+}
+
+ul {
+    display: flex;
+    justify-content: space-evenly;
 }
 .main-header {
-
+    border: #ff0000 solid 2px;
 }
 
 .hero-image {
@@ -42,6 +60,11 @@
     width: 35%;
     height: auto;
     border-radius: 8px;
+    
+}
+
+.info-section {
+    background-color: #f4f7fb;
 }
 
 .example-loads, .places {
@@ -50,19 +73,20 @@
     padding: 0 150px;
     margin-bottom: 20px;
     gap: 30px;
-    border: #00f solid 2px;
 }
 
 .load-pic {
     border-radius: 8px;
     width: 15vw;
     height: auto;
+    border:  solid 2px;
 }
 
 .location {
     border-radius: 8px;
     width: 20vw;
     height: auto;
+    border: #708090 solid 2px;
 }
 .quote {
     color: #1f2937;
@@ -72,18 +96,17 @@
     text-align: center;
     padding: 100px 175px;
     background-color: #e5e7eb;
-    border: red solid 2px;
 }
 
 .call-action { 
     display: flex;
-    background-color: #fffff0;
-    border: #00f solid 2px;
+    background-color: #f4f7fb;
 }
 
 .action-box {
     display: flex;
-    background-color: #3882f6;
+    padding: 50px;
+    background-color: #f4f7fb;
 
 }
 
@@ -91,7 +114,7 @@
     color: #e5e7eb;
     font-size: 12px;
     text-align: center;
-    padding: 10px 0 25px;
+    padding: 20px;
     background-color: #1f2937;
     border: #f0ffff solid 2px;
 }
@@ -125,14 +148,9 @@
 .secondary { /* Might not need this */
     display: flex;
     color: #e5e7eb;
-}
+} 
 
 .italic {
     font-style: italic;
 }
 
-a {
-    display: flex;
-    text-decoration: none;
-    color: #e5e7eb;
-}
