--- a/styles.css
+++ b/styles.css
@@ -83,9 +83,16 @@ ul {
 .example-loads, .places {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
     padding: 0 150px;
     margin-bottom: 20px;
     gap: 30px;
+}
+
+.load, .place {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .load-pic {
